Fixed BUG#9680: Wrong error from cascading update   Applied 9680.patch (by Osku Salerma)